# rubyholdem

./: Makefile.in  README  RubyHoldem.vcproj  bootstrap  configure.ac  pokerbot_sample.rb  rubyholdem.c  rubyholdem.cpp  rubyholdem.rb  rubyholdem_spec.rb  whuser.dll.spec
m4/: ax_ruby_devel.m4
